--- a/portalestagios/portalestagios/src/main/resources/application.properties
+++ b/portalestagios/portalestagios/src/main/resources/application.properties
@@ -12,3 +12,14 @@ spring.jpa.properties.hibernate.format_sql=true
 # Swagger (se adicionou o springdoc no pom)
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+server.forward-headers-strategy=framework
+
+# JWT (dev)
+app.jwt.secret=change-this-dev-secret-32chars-min-change-this
+app.jwt.expiration=3600000
+# 3600000 = 1 hora em milissegundos
+
+
+
+
