--- a/portalestagios/portalestagios/src/main/resources/application.properties
+++ b/portalestagios/portalestagios/src/main/resources/application.properties
@@ -1,25 +1,23 @@
-server.port=8080
+# ====== Server ======
+server.port=8081
+server.address=0.0.0.0
+server.forward-headers-strategy=framework
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/portal_estagios
+# ====== Datasource (Postgres no Docker mapeado em 5433) ======
+spring.datasource.url=jdbc:postgresql://localhost:5433/portal_estagios
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# ====== JPA/Hibernate ======
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Swagger (se adicionou o springdoc no pom)
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+# ====== Swagger (springdoc) ======
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
 
-server.forward-headers-strategy=framework
-
-# JWT (dev)
+# ====== JWT (dev) ======
 app.jwt.secret=change-this-dev-secret-32chars-min-change-this
 app.jwt.expiration=3600000
-# 3600000 = 1 hora em milissegundos
-
-
-
-
