--- a/portal-estagios-spa/.env
+++ b/portal-estagios-spa/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://SEU-CODESPACE-8080.app.github.dev
+VITE_API_URL=https://studious-lamp-7vqxj7v9jqjfpxv4-8081.app.github.dev
