--- a/portal-estagios-spa/tsconfig.json
+++ b/portal-estagios-spa/tsconfig.json
@@ -7,7 +7,7 @@
     "jsx": "react-jsx",
     "strict": true,
     "baseUrl": ".",
-    "types": ["vite/client"],
+    "types": ["vite/client", "react", "react-dom", "node"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
